<resources>
    <string name="app_name">OnTime</string>

    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="EventsList">Events</string>
    <string name="createClass">Class Name</string>
    <string name="selectPhoneMode">Phone Mode</string>
    <string name="setClassTime">Set class Time</string>
    <string name="preference">Had Coffee ?</string>
    <string name="save">save</string>
    <string-array name="modes">
        <item>Silent</item>
        <item>Vibrate</item>
        <item>General</item>
    </string-array>
</resources>
