<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

 <RelativeLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">

     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/app_name"/>
    <EditText
        android:id="@+id/classname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/selectPhoneMode"/>
     <Spinner
         android:id="@+id/modespinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         />
     <Button
         android:id="@+id/timepicker"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/setClassTime"/>
     <TextView
         android:id="@+id/selectedtime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         />

 </RelativeLayout>

</LinearLayout>
